Fix word wrap

--- a/AliceAdventure/app/Editor/Pages/css/layout.css
+++ b/AliceAdventure/app/Editor/Pages/css/layout.css
@@ -502,6 +502,11 @@ input:checked + .slider:before {
   /* letter-spacing: 1px; */
   font-size: 15px;
   float: left;
+  max-width: 160px;
+  overflow: hidden;
+  height: 1em;
+  overflow-wrap: normal;
+  word-break: break-all;
 }
 
 .progressive-builder-heading {
